Дипломный проект этап 2.1 - исправлены все замечания ревьюера