@@ -3,8 +3,10 @@ package ru.practicum.main.service.impl;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.stats.client.StatsClient;
 import ru.practicum.main.dto.request.NewCompilationRequest;
 import ru.practicum.main.dto.request.UpdateCompilationRequest;
 import ru.practicum.main.dto.response.CompilationResponse;
@@ -13,17 +15,15 @@ import ru.practicum.main.exception.NotFoundException;
 import ru.practicum.main.mapper.CompilationMapper;
 import ru.practicum.main.model.Compilation;
 import ru.practicum.main.model.Event;
-import ru.practicum.main.model.RequestStatus;
 import ru.practicum.main.repository.CompilationRepository;
 import ru.practicum.main.repository.EventRepository;
 import ru.practicum.main.repository.RequestRepository;
 import ru.practicum.main.service.CompilationService;
-import ru.practicum.main.client.StatsClient;
+import ru.practicum.main.validator.PaginationValidator;
 import ru.practicum.stats.dto.ViewStatsDto;
 
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -46,7 +46,7 @@ public class CompilationServiceImpl implements CompilationService {
         Compilation compilation = CompilationMapper.toCompilation(request, events);
         Compilation savedCompilation = compilationRepository.save(compilation);
         log.info("Добавлена новая подборка: {}", savedCompilation);
-        return enrichCompilation(savedCompilation);
+        return enrichSingleCompilation(savedCompilation);
     }
 
     @Override
@@ -68,35 +68,42 @@ public class CompilationServiceImpl implements CompilationService {
             }
         }
 
-        List<Event> events = getEventsByIds(request.getEvents());
+        List<Event> events = null;
+        if (request.getEvents() != null) {
+            events = getEventsByIds(request.getEvents());
+        }
+
         CompilationMapper.updateCompilationFromRequest(compilation, request, events);
         Compilation updatedCompilation = compilationRepository.save(compilation);
         log.info("Обновлена подборка: {}", updatedCompilation);
-        return enrichCompilation(updatedCompilation);
+        return enrichSingleCompilation(updatedCompilation);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<CompilationResponse> getCompilations(Boolean pinned, Integer from, Integer size) {
+        PaginationValidator.validate(from, size);
+
         List<Compilation> compilations;
+        Pageable pageable = PageRequest.of(from / size, size);
+
         if (pinned != null) {
-            compilations = compilationRepository.findAllByPinned(pinned);
+            compilations = compilationRepository.findAllByPinned(pinned, pageable);
         } else {
-            compilations = compilationRepository.findAll(PageRequest.of(from / size, size)).getContent();
+            compilations = compilationRepository.findAll(pageable).getContent();
         }
-        return compilations.stream()
-                .map(this::enrichCompilation)
-                .collect(Collectors.toList());
+
+        return enrichCompilationsBatch(compilations);
     }
 
     @Override
     @Transactional(readOnly = true)
     public CompilationResponse getCompilation(Long compId) {
         Compilation compilation = getCompilationOrThrow(compId);
-        return enrichCompilation(compilation);
+        return enrichSingleCompilation(compilation);
     }
 
-    // ============= ВСПОМОГАТЕЛЬНЫЕ МЕТОДЫ =============
+    // ===================== ВСПОМОГАТЕЛЬНЫЕ МЕТОДЫ =====================
 
     private Compilation getCompilationOrThrow(Long compId) {
         return compilationRepository.findById(compId)
@@ -107,19 +114,73 @@ public class CompilationServiceImpl implements CompilationService {
         if (eventIds == null || eventIds.isEmpty()) {
             return List.of();
         }
-        return eventRepository.findAllById(eventIds);
+
+        List<Event> events = eventRepository.findAllById(eventIds);
+
+        if (events.size() != eventIds.size()) {
+            List<Long> foundIds = events.stream().map(Event::getId).toList();
+            List<Long> notFound = eventIds.stream()
+                    .filter(id -> !foundIds.contains(id))
+                    .toList();
+            throw new NotFoundException("События с id " + notFound + " не найдены");
+        }
+
+        return events;
     }
 
-    private CompilationResponse enrichCompilation(Compilation compilation) {
+    private List<CompilationResponse> enrichCompilationsBatch(List<Compilation> compilations) {
+        if (compilations.isEmpty()) {
+            return List.of();
+        }
+
+        List<Long> allEventIds = compilations.stream()
+                .flatMap(c -> c.getEvents().stream())
+                .map(Event::getId)
+                .distinct()
+                .collect(Collectors.toList());
+
+        if (allEventIds.isEmpty()) {
+            return compilations.stream()
+                    .map(c -> CompilationMapper.toCompilationResponse(c, Map.of(), Map.of()))
+                    .collect(Collectors.toList());
+        }
+
+        Map<String, Long> viewsMap = getViewsMap(allEventIds);
+
+        Map<Long, Long> confirmedMap = getConfirmedRequestsMap(allEventIds);
+
+        return compilations.stream()
+                .map(compilation -> CompilationMapper.toCompilationResponse(
+                        compilation,
+                        viewsMap,
+                        confirmedMap
+                ))
+                .collect(Collectors.toList());
+    }
+
+    private CompilationResponse enrichSingleCompilation(Compilation compilation) {
         List<Event> events = compilation.getEvents();
         if (events.isEmpty()) {
             return CompilationMapper.toCompilationResponse(compilation, Map.of(), Map.of());
         }
 
-        List<Long> eventIds = events.stream().map(Event::getId).collect(Collectors.toList());
-        List<String> uris = eventIds.stream().map(id -> "/events/" + id).collect(Collectors.toList());
+        List<Long> eventIds = events.stream().map(Event::getId).toList();
 
-        Map<String, Long> viewsMap;
+        Map<String, Long> viewsMap = getViewsMap(eventIds);
+        Map<Long, Long> confirmedMap = getConfirmedRequestsMap(eventIds);
+
+        return CompilationMapper.toCompilationResponse(compilation, viewsMap, confirmedMap);
+    }
+
+    private Map<String, Long> getViewsMap(List<Long> eventIds) {
+        if (eventIds == null || eventIds.isEmpty()) {
+            return Map.of();
+        }
+
+        List<String> uris = eventIds.stream()
+                .map(id -> "/events/" + id)
+                .collect(Collectors.toList());
+
         try {
             List<ViewStatsDto> stats = statsClient.getStats(
                     LocalDateTime.now().minusYears(10),
@@ -127,23 +188,30 @@ public class CompilationServiceImpl implements CompilationService {
                     uris,
                     true
             );
-            viewsMap = stats.stream()
+
+            return stats.stream()
                     .collect(Collectors.toMap(
                             ViewStatsDto::getUri,
                             ViewStatsDto::getHits,
                             (existing, replacement) -> existing
                     ));
         } catch (Exception e) {
-            log.error("Ошибка получения статистики для подборки {}", compilation.getId(), e);
-            viewsMap = Map.of();
+            log.error("Ошибка получения статистики для событий {}", eventIds, e);
+            return new HashMap<>();
+        }
+    }
+
+    private Map<Long, Long> getConfirmedRequestsMap(List<Long> eventIds) {
+        if (eventIds == null || eventIds.isEmpty()) {
+            return Map.of();
         }
 
-        Map<Long, Long> confirmedMap = eventIds.stream()
-                .collect(Collectors.toMap(
-                        eventId -> eventId,
-                        eventId -> requestRepository.countByEventIdAndStatus(eventId, RequestStatus.CONFIRMED)
-                ));
+        List<Object[]> results = requestRepository.countConfirmedRequestsByEventIds(eventIds);
 
-        return CompilationMapper.toCompilationResponse(compilation, viewsMap, confirmedMap);
+        return results.stream()
+                .collect(Collectors.toMap(
+                        row -> (Long) row[0],
+                        row -> (Long) row[1]
+                ));
     }
 }
